// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`should display the error received 1`] = `
<body>
  <div>
    <div
      class="MuiFormControl-root makeStyles-formControl-37"
    >
      <label
        class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementTop"
      >
        <span
          aria-disabled="false"
          class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-41 MuiCheckbox-root makeStyles-style-38 makeStyles-style-40"
          data-testid="CheckboxLabel"
        >
          <span
            class="MuiIconButton-label"
          >
            <input
              class="PrivateSwitchBase-input-44"
              data-indeterminate="false"
              name="CheckboxLabel"
              type="checkbox"
              value=""
            />
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </span>
        <span
          class="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
        >
          <div
            class="makeStyles-propertySectionLabel-45"
          >
            <h6
              class="MuiTypography-root makeStyles-typography-48 MuiTypography-subtitle2"
            >
              CheckboxLabel
            </h6>
          </div>
        </span>
      </label>
      <p
        class="MuiFormHelperText-root"
      />
    </div>
  </div>
</body>
`;

exports[`should display the error received 2`] = `
<body>
  <div>
    <div
      class="MuiFormControl-root makeStyles-formControl-37"
    >
      <label
        class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementTop"
      >
        <span
          aria-disabled="false"
          class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-41 MuiCheckbox-root makeStyles-style-38 makeStyles-style-40"
          data-testid="CheckboxLabel"
        >
          <span
            class="MuiIconButton-label"
          >
            <input
              class="PrivateSwitchBase-input-44"
              data-indeterminate="false"
              name="CheckboxLabel"
              type="checkbox"
              value=""
            />
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </span>
        <span
          class="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
        >
          <div
            class="makeStyles-propertySectionLabel-45"
          >
            <h6
              class="MuiTypography-root makeStyles-typography-48 MuiTypography-subtitle2"
            >
              CheckboxLabel
            </h6>
          </div>
        </span>
      </label>
      <p
        class="MuiFormHelperText-root Mui-focused"
      />
    </div>
  </div>
</body>
`;

exports[`should render a checkbox with help hint 1`] = `
<div>
  <div
    class="MuiFormControl-root makeStyles-formControl-85"
  >
    <label
      class="MuiFormControlLabel-root Mui-disabled"
    >
      <span
        aria-disabled="true"
        class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-89 MuiCheckbox-root makeStyles-style-86 makeStyles-style-88 PrivateSwitchBase-disabled-91 Mui-disabled makeStyles-disabled-87 Mui-disabled Mui-disabled"
        data-testid="CheckboxLabel"
        tabindex="-1"
      >
        <span
          class="MuiIconButton-label"
        >
          <input
            class="PrivateSwitchBase-input-92"
            data-indeterminate="false"
            disabled=""
            name="CheckboxLabel"
            type="checkbox"
            value=""
          />
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
            />
          </svg>
        </span>
      </span>
      <span
        class="MuiTypography-root MuiFormControlLabel-label Mui-disabled MuiTypography-body1"
      >
        <div
          class="makeStyles-propertySectionLabel-93"
        >
          <h6
            class="MuiTypography-root makeStyles-typography-96 MuiTypography-subtitle2"
          >
            CheckboxLabel
          </h6>
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-colorSecondary"
            focusable="false"
            style="margin-left: 8px; font-size: 16px;"
            title=""
            viewBox="0 0 24 24"
          >
            <path
              d="M11 18h2v-2h-2v2zm1-16C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8zm0-14c-2.21 0-4 1.79-4 4h2c0-1.1.9-2 2-2s2 .9 2 2c0 2-3 1.75-3 5h2c0-2.25 3-2.5 3-5 0-2.21-1.79-4-4-4z"
            />
          </svg>
        </div>
      </span>
    </label>
    <p
      class="MuiFormHelperText-root"
    />
  </div>
</div>
`;

exports[`should render a readOnly checkbox 1`] = `
<div>
  <div
    class="MuiFormControl-root makeStyles-formControl-13"
  >
    <label
      class="MuiFormControlLabel-root Mui-disabled"
    >
      <span
        aria-disabled="true"
        class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-17 MuiCheckbox-root makeStyles-style-14 makeStyles-style-16 PrivateSwitchBase-disabled-19 Mui-disabled makeStyles-disabled-15 Mui-disabled Mui-disabled"
        data-testid="CheckboxLabel"
        tabindex="-1"
      >
        <span
          class="MuiIconButton-label"
        >
          <input
            class="PrivateSwitchBase-input-20"
            data-indeterminate="false"
            disabled=""
            name="CheckboxLabel"
            type="checkbox"
            value=""
          />
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
            />
          </svg>
        </span>
      </span>
      <span
        class="MuiTypography-root MuiFormControlLabel-label Mui-disabled MuiTypography-body1"
      >
        <div
          class="makeStyles-propertySectionLabel-21"
        >
          <h6
            class="MuiTypography-root makeStyles-typography-24 MuiTypography-subtitle2"
          >
            CheckboxLabel
          </h6>
        </div>
      </span>
    </label>
    <p
      class="MuiFormHelperText-root"
    />
  </div>
</div>
`;

exports[`should render a readOnly checkbox from widget properties 1`] = `
<div>
  <div
    class="MuiFormControl-root makeStyles-formControl-97"
  >
    <label
      class="MuiFormControlLabel-root Mui-disabled"
    >
      <span
        aria-disabled="true"
        class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-101 MuiCheckbox-root makeStyles-style-98 makeStyles-style-100 PrivateSwitchBase-disabled-103 Mui-disabled makeStyles-disabled-99 Mui-disabled Mui-disabled"
        data-testid="CheckboxLabel"
        tabindex="-1"
      >
        <span
          class="MuiIconButton-label"
        >
          <input
            class="PrivateSwitchBase-input-104"
            data-indeterminate="false"
            disabled=""
            name="CheckboxLabel"
            type="checkbox"
            value=""
          />
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
            />
          </svg>
        </span>
      </span>
      <span
        class="MuiTypography-root MuiFormControlLabel-label Mui-disabled MuiTypography-body1"
      >
        <div
          class="makeStyles-propertySectionLabel-105"
        >
          <h6
            class="MuiTypography-root makeStyles-typography-108 MuiTypography-subtitle2"
          >
            CheckboxLabel
          </h6>
        </div>
      </span>
    </label>
    <p
      class="MuiFormHelperText-root"
    />
  </div>
</div>
`;

exports[`should render the checkbox 1`] = `
<div>
  <div
    class="MuiFormControl-root makeStyles-formControl-1"
  >
    <label
      class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementTop"
    >
      <span
        aria-disabled="false"
        class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-5 MuiCheckbox-root makeStyles-style-2 makeStyles-style-4"
        data-testid="CheckboxLabel"
      >
        <span
          class="MuiIconButton-label"
        >
          <input
            class="PrivateSwitchBase-input-8"
            data-indeterminate="false"
            name="CheckboxLabel"
            type="checkbox"
            value=""
          />
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
            />
          </svg>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </span>
      <span
        class="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
      >
        <div
          class="makeStyles-propertySectionLabel-9"
        >
          <h6
            class="MuiTypography-root makeStyles-typography-12 MuiTypography-subtitle2"
          >
            CheckboxLabel
          </h6>
        </div>
      </span>
    </label>
    <p
      class="MuiFormHelperText-root"
    />
  </div>
</div>
`;

exports[`should render the checkbox with empty style 1`] = `
<body>
  <div>
    <div
      class="MuiFormControl-root makeStyles-formControl-73"
    >
      <label
        class="MuiFormControlLabel-root"
      >
        <span
          aria-disabled="false"
          class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-77 MuiCheckbox-root makeStyles-style-74 makeStyles-style-76"
          data-testid="CheckboxLabel"
        >
          <span
            class="MuiIconButton-label"
          >
            <input
              class="PrivateSwitchBase-input-80"
              data-indeterminate="false"
              name="CheckboxLabel"
              type="checkbox"
              value=""
            />
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </span>
        <span
          class="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
        >
          <div
            class="makeStyles-propertySectionLabel-81"
          >
            <h6
              class="MuiTypography-root makeStyles-typography-84 MuiTypography-subtitle2"
            >
              CheckboxLabel
            </h6>
          </div>
        </span>
      </label>
      <p
        class="MuiFormHelperText-root"
      />
    </div>
  </div>
</body>
`;

exports[`should render the checkbox with style 1`] = `
<body>
  <div>
    <div
      class="MuiFormControl-root makeStyles-formControl-61"
    >
      <label
        class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementTop"
      >
        <span
          aria-disabled="false"
          class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-65 MuiCheckbox-root makeStyles-style-62 makeStyles-style-64"
          data-testid="CheckboxLabel"
        >
          <span
            class="MuiIconButton-label"
          >
            <input
              class="PrivateSwitchBase-input-68"
              data-indeterminate="false"
              name="CheckboxLabel"
              type="checkbox"
              value=""
            />
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </span>
        <span
          class="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
        >
          <div
            class="makeStyles-propertySectionLabel-69"
          >
            <h6
              class="MuiTypography-root makeStyles-typography-72 MuiTypography-subtitle2"
            >
              CheckboxLabel
            </h6>
          </div>
        </span>
      </label>
      <p
        class="MuiFormHelperText-root"
      />
    </div>
  </div>
</body>
`;

exports[`should render the checkbox without style 1`] = `
<body>
  <div>
    <div
      class="MuiFormControl-root makeStyles-formControl-49"
    >
      <label
        class="MuiFormControlLabel-root"
      >
        <span
          aria-disabled="false"
          class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-53 MuiCheckbox-root makeStyles-style-50 makeStyles-style-52"
          data-testid="CheckboxLabel"
        >
          <span
            class="MuiIconButton-label"
          >
            <input
              class="PrivateSwitchBase-input-56"
              data-indeterminate="false"
              name="CheckboxLabel"
              type="checkbox"
              value=""
            />
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </span>
        <span
          class="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
        >
          <div
            class="makeStyles-propertySectionLabel-57"
          >
            <h6
              class="MuiTypography-root makeStyles-typography-60 MuiTypography-subtitle2"
            >
              CheckboxLabel
            </h6>
          </div>
        </span>
      </label>
      <p
        class="MuiFormHelperText-root"
      />
    </div>
  </div>
</body>
`;

exports[`should send mutation when clicked 1`] = `
<div>
  <div
    class="MuiFormControl-root makeStyles-formControl-25"
  >
    <label
      class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementTop"
    >
      <span
        aria-disabled="false"
        class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-29 MuiCheckbox-root makeStyles-style-26 makeStyles-style-28"
        data-testid="CheckboxLabel"
      >
        <span
          class="MuiIconButton-label"
        >
          <input
            class="PrivateSwitchBase-input-32"
            data-indeterminate="false"
            name="CheckboxLabel"
            type="checkbox"
            value=""
          />
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
            />
          </svg>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </span>
      <span
        class="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
      >
        <div
          class="makeStyles-propertySectionLabel-33"
        >
          <h6
            class="MuiTypography-root makeStyles-typography-36 MuiTypography-subtitle2"
          >
            CheckboxLabel
          </h6>
        </div>
      </span>
    </label>
    <p
      class="MuiFormHelperText-root"
    />
  </div>
</div>
`;

exports[`should send mutation when clicked 2`] = `
<div>
  <div
    class="MuiFormControl-root makeStyles-formControl-25"
  >
    <label
      class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementTop"
    >
      <span
        aria-disabled="false"
        class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-29 MuiCheckbox-root makeStyles-style-26 makeStyles-style-28"
        data-testid="CheckboxLabel"
      >
        <span
          class="MuiIconButton-label"
        >
          <input
            class="PrivateSwitchBase-input-32"
            data-indeterminate="false"
            name="CheckboxLabel"
            type="checkbox"
            value=""
          />
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
            />
          </svg>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </span>
      <span
        class="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
      >
        <div
          class="makeStyles-propertySectionLabel-33"
        >
          <h6
            class="MuiTypography-root makeStyles-typography-36 MuiTypography-subtitle2"
          >
            CheckboxLabel
          </h6>
        </div>
      </span>
    </label>
    <p
      class="MuiFormHelperText-root Mui-focused"
    />
  </div>
</div>
`;
